cmake_minimum_required(VERSION 3.16)

project(iv LANGUAGES C)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_executable(iv
    main.c
    ansi_escapes.c
    utils.c
)

target_include_directories(iv PRIVATE
    "${CMAKE_CURRENT_SOURCE_DIR}"
)

